[gd_scene load_steps=6 format=3 uid="uid://cdyuvn3ksxcwd"]

[ext_resource type="Script" path="res://scripts/meteorite_dodge.gd" id="1_meteorite"]
[ext_resource type="PackedScene" uid="uid://7iyb53wxofj5" path="res://scenes/astronaut.tscn" id="2_player"]
[ext_resource type="Texture2D" path="res://assets/asteroid.png" id="3_asteroid"]

[sub_resource type="CircleShape2D" id="CircleShape2D_meteorite"]
radius = 20.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bounds"]
size = Vector2(1280, 20)

[node name="MeteoriteDodge" type="Node2D"]
script = ExtResource("1_meteorite")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.05, 0.02, 0.15, 1)

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(640, 360)

[node name="UI" type="CanvasLayer" parent="."]

[node name="TimerLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 60.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 32
text = "0.0s"

[node name="HighscoreLabel" type="Label" parent="UI"]
offset_left = 20.0
offset_top = 70.0
offset_right = 300.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Best: 0.0s"

[node name="MeteoriteContainer" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 1.0
autostart = true

[node name="Bounds" type="StaticBody2D" parent="."]

[node name="Top" type="CollisionShape2D" parent="Bounds"]
position = Vector2(640, 10)
shape = SubResource("RectangleShape2D_bounds")

[node name="Bottom" type="CollisionShape2D" parent="Bounds"]
position = Vector2(640, 710)
shape = SubResource("RectangleShape2D_bounds")

[node name="Left" type="CollisionShape2D" parent="Bounds"]
position = Vector2(10, 360)
rotation = 1.5708
shape = SubResource("RectangleShape2D_bounds")

[node name="Right" type="CollisionShape2D" parent="Bounds"]
position = Vector2(1270, 360)
rotation = 1.5708
shape = SubResource("RectangleShape2D_bounds")

[node name="MeteoriteTemplate" type="Area2D" parent="."]
visible = false

[node name="Sprite" type="Sprite2D" parent="MeteoriteTemplate"]
texture = ExtResource("3_asteroid")
scale = Vector2(0.1, 0.1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MeteoriteTemplate"]
shape = SubResource("CircleShape2D_meteorite")

[node name="MobileControls" type="CanvasLayer" parent="."]

[node name="ControlContainer" type="Control" parent="MobileControls"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftButton" type="TouchScreenButton" parent="MobileControls/ControlContainer"]
position = Vector2(50, 570)
scale = Vector2(2, 2)
action = "ui_left"

[node name="Icon" type="ColorRect" parent="MobileControls/ControlContainer/LeftButton"]
offset_right = 50.0
offset_bottom = 50.0
color = Color(1, 1, 1, 0.3)

[node name="Arrow" type="Label" parent="MobileControls/ControlContainer/LeftButton/Icon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "←"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RightButton" type="TouchScreenButton" parent="MobileControls/ControlContainer"]
position = Vector2(250, 570)
scale = Vector2(2, 2)
action = "ui_right"

[node name="Icon" type="ColorRect" parent="MobileControls/ControlContainer/RightButton"]
offset_right = 50.0
offset_bottom = 50.0
color = Color(1, 1, 1, 0.3)

[node name="Arrow" type="Label" parent="MobileControls/ControlContainer/RightButton/Icon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "→"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpButton" type="TouchScreenButton" parent="MobileControls/ControlContainer"]
position = Vector2(150, 470)
scale = Vector2(2, 2)
action = "ui_up"

[node name="Icon" type="ColorRect" parent="MobileControls/ControlContainer/UpButton"]
offset_right = 50.0
offset_bottom = 50.0
color = Color(1, 1, 1, 0.3)

[node name="Arrow" type="Label" parent="MobileControls/ControlContainer/UpButton/Icon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "↑"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DownButton" type="TouchScreenButton" parent="MobileControls/ControlContainer"]
position = Vector2(150, 570)
scale = Vector2(2, 2)
action = "ui_down"

[node name="Icon" type="ColorRect" parent="MobileControls/ControlContainer/DownButton"]
offset_right = 50.0
offset_bottom = 50.0
color = Color(1, 1, 1, 0.3)

[node name="Arrow" type="Label" parent="MobileControls/ControlContainer/DownButton/Icon"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "↓"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
